[gd_scene load_steps=7 format=3 uid="uid://bqjae5onwnm1p"]

[ext_resource type="Texture2D" uid="uid://bs0ywdv1ic7gg" path="res://Assets/sheep_assets/sheep_assets_x4_sans_bordure.png" id="1_81mk3"]
[ext_resource type="Script" path="res://Scripts/barrier.gd" id="1_bw726"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4rx0c"]
texture = ExtResource("1_81mk3")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -24, 12, -24, 12, 32, -16, 32)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -32, 12, -32, 12, 32, -16, 32)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -32, 12, -32, 12, 28, -16, 28)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
0:14/0 = 0
1:14/0 = 0
1:17/0 = 0
2:17/0 = 0
0:18/0 = 0
1:18/0 = 0
0:19/0 = 0
1:19/0 = 0
1:21/0 = 0
2:21/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
1:6/0 = 0
0:6/0 = 0
0:7/0 = 0
0:8/0 = 0
1:8/0 = 0
1:7/0 = 0
2:7/0 = 0
0:9/0 = 0
0:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
1:9/0 = 0
1:10/0 = 0
2:9/0 = 0
2:15/0 = 0
1:15/0 = 0
0:15/0 = 0
0:16/0 = 0
1:16/0 = 0
0:17/0 = 0
2:19/0 = 0
1:20/0 = 0
0:20/0 = 0
0:21/0 = 0

[sub_resource type="TileSet" id="TileSet_ysbg7"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_4rx0c")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1wbmp"]
size = Vector2(21.625, 1405.56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q27to"]
size = Vector2(20, 130.5)

[node name="barrier" type="StaticBody2D"]
position = Vector2(514, 24)
script = ExtResource("1_bw726")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-35, 24)
tile_set = SubResource("TileSet_ysbg7")
format = 2
layer_0/tile_data = PackedInt32Array(-262143, 327680, 1, -196607, 327680, 1, -131071, 327680, 1, -65535, 327680, 1, 1, 327680, 1, 65537, 327680, 1, 131073, 327680, 1, 458753, 327680, 1, 524289, 327680, 1, 589825, 327680, 1, 655361, 327680, 1, 720897, 327680, 1, 983041, 327680, 1, 1048577, 327680, 1, 917505, 327680, 1, 851969, 327680, 1, 786433, 327680, 1, 393217, 327680, 0, 196609, 327680, 2, -327679, 327680, 1, -393215, 327680, 1, -458751, 327680, 1, -524287, 327680, 1, -589823, 327680, 1, -655359, 327680, 1, -720895, 327680, 1, 1114113, 327680, 1, 1179649, 327680, 1, 1245185, 327680, 1, 1310721, 327680, 1, 1376257, 327680, 1, 1441793, 327680, 1, 1507329, 327680, 1, 1572865, 327680, 1, 1638401, 327680, 1, 1703937, 327680, 1, -786431, 327680, 1, -851967, 327680, 1, -917503, 327680, 1, -983039, 327680, 1, -1048575, 327680, 1, -1114111, 327680, 1, -1179647, 327680, 1, 1769473, 327680, 1, 1835009, 327680, 1, 1900545, 327680, 1, 1966081, 327680, 1, 2031617, 327680, 1)

[node name="kill2" type="Area2D" parent="."]
position = Vector2(55, -426)

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill2"]
position = Vector2(-0.125, 0.0625)
shape = SubResource("RectangleShape2D_1wbmp")

[node name="kill1" type="Area2D" parent="."]
position = Vector2(55, 1118)

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill1"]
position = Vector2(-0.1875, -0.21875)
shape = SubResource("RectangleShape2D_1wbmp")

[node name="scoreGate" type="Area2D" parent="."]
position = Vector2(55, 346)

[node name="CollisionShape2D" type="CollisionShape2D" parent="scoreGate"]
shape = SubResource("RectangleShape2D_q27to")

[connection signal="body_entered" from="kill2" to="." method="_on_kill_2_body_entered"]
[connection signal="body_entered" from="kill1" to="." method="_on_kill_1_body_entered"]
[connection signal="body_entered" from="scoreGate" to="." method="_on_score_gate_body_entered"]
